@@ -1,6 +1,6 @@
 #! /bin/sh
 #
-# Copyright (C) 2006, 2009 Free Software Foundation, Inc.
+# Copyright (C) 2006, 2009, 2019 Free Software Foundation, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -20,5 +20,4 @@
 # This is a separate script because $(GLOBAL_SYMBOL_PIPE) cannot be used in a
 # Makefile, since it may contain dollar signs.
 
-nm_cmd="@NM@ \"\$1\" | @GLOBAL_SYMBOL_PIPE@"
-eval $nm_cmd
+@NM@ "$1" | @GLOBAL_SYMBOL_PIPE@
